Fixed issue with long links on MainMenu creating horizontal scrolling by setting max-width for grid contents

--- a/src/styles/MainMenu.scss
+++ b/src/styles/MainMenu.scss
@@ -149,6 +149,9 @@
   text-align: center; // Keep centered
   margin-top: 5px;
   margin-bottom: 5px;
+  overflow-wrap: anywhere;
+  min-width: 0;
+  max-width: 250px;
 }
 
 .mainmenu-algo-link:hover {
